# codeforces-helper

./: .gitignore  README.md  pyproject.toml
cf_helper/: api.py  archive.py  cli.py  colors.py  config.py  runner.py  scraper.py  stress.py  watcher.py
example_contest/: README.md
example_contest/A/: result.txt
example_contest/B2/: solution.cpp
example_contest/C/: result.txt
example_contest/D/: solution.cpp
example_contest/E/: solution.cpp
example_contest/F/: solution.cpp
templates/: Solution.java  solution.cpp
